# rules_sycl

./: .bazelrc  .pre-commit-config.yaml  CODEOWNERS  LICENSE  MODULE.bazel  README.md  WORKSPACE.bazel
.bcr/: metadata.template.json  presubmit.yml
.github/: release_notes.template
.github/workflows/: github-pages.yaml  release.yaml  utilities-tests.yaml
docs/: BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  build-docs.sh  developer_docs.bzl  mkdocs.yaml  user_docs.bzl
latest/: 404.html  index.html
latest/search/: search_index.json
latest/user/user_docs/: index.html
ocl/: extensions.bzl  repositories.bzl
sycl/: BUILD.bazel  defs.bzl  extensions.bzl  repositories.bzl
sycl/dummy/: BUILD.bazel  dummy.cpp
sycl/private/: defs.bzl  gcc_helper.bzl  msvc_helper.bzl  os_helpers.bzl  providers.bzl  repositories.bzl  template_helper.bzl
sycl/private/actions/: codegen.bzl  compile.bzl
sycl/private/macros/: icx_cc_binary.bzl  icx_cc_library.bzl  icx_cc_test.bzl  icx_helper.bzl  sycl_binary.bzl  sycl_library.bzl  sycl_test.bzl
sycl/private/rules/: common.bzl  flags.bzl  spv_library.bzl
sycl/private/templates/: BUILD.icx  BUILD.sycl_headers  BUILD.sycl_shared  BUILD.toolchain_disabled  BUILD.toolchain_icx  BUILD.toolchain_icx_msvc  BUILD.toolchain_platform  README.md  defs.bzl.tpl  unix_cc_toolchain_config.bzl  windows_cc_toolchain_config.bzl
tests/aot/vadd/: BUILD.bazel  main.cc
tests/basic/: kernel.cc  kernel.h  main.cc
tests/basic/compatibility/: BUILD.bazel  lib.cc
tests/basic/vector_always/: BUILD.bazel
tests/ocl/: BUILD.bazel  print_dev_info.cc
tests/sycl/: BUILD.bazel
tests/sycl/common/: readme.md
tests/sycl/common/stb/: third-party-programs.txt
tests/sycl/mandelbrot/: BUILD.bazel
tests/sycl/nbody/: BUILD.bazel  GSimulation.cpp
tests/sycl/vadd/: BUILD.bazel
