module(
    name = "rules_sycl",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "0.0.10")

sycl = use_extension("@rules_sycl//sycl:extensions.bzl", "toolchain")
sycl.toolkit(
    name = "sycl",
    toolkit_path = "",
)
use_repo(sycl, "sycl")

register_toolchains(
    "@sycl//toolchain:icx-local-toolchain",
)

ocl = use_extension("@rules_sycl//ocl:extensions.bzl", "opencl_extension", dev_dependency = True)
use_repo(
    ocl,
    "opencl_clhpp",
    "opencl_headers",
    "opencl_icd_loader",
)
