workspace(name = "rules_sycl")

local_repository(
    name = "rules_sycl_examples",
    path = "examples",
)

load("@rules_sycl//sycl:repositories.bzl", "rules_sycl_dependencies", "rules_sycl_toolchains")

rules_sycl_dependencies()

rules_sycl_toolchains(register_toolchains = True)

load("@bazel_skylib//:workspace.bzl", "bazel_skylib_workspace")

bazel_skylib_workspace()
