module(
    name = "rules_sycl_docs",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_sycl", version = "0.0.0")
local_path_override(
    module_name = "rules_sycl",
    path = "..",
)

sycl = use_extension("@rules_sycl//sycl:extensions.bzl", "toolchain")
sycl.toolkit(
    name = "sycl",
    toolkit_path = "",
)
use_repo(sycl, "sycl")

bazel_dep(
    name = "stardoc",
    version = "0.7.0",
    repo_name = "io_bazel_stardoc",
)
