package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "icx",
    srcs = ["dummy.cpp"],
    defines = ["TOOLNAME=icx"],
)

cc_binary(
    name = "ocloc",
    srcs = ["dummy.cpp"],
    defines = ["TOOLNAME=ocloc"],
)

cc_binary(
    name = "llvm-spirv",
    srcs = ["dummy.cpp"],
    defines = ["TOOLNAME=llvm-spirv"],
)
